# gsp

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: clippy_check.yaml  release.yaml
dict/fr_FR/: abbreviation.dic.ponctuation  acronym.dic.acronym  brands_and_companies.dic  english_terms.dic  english_terms.dic.ponctuation  expressions.dic  firstnames_men.dic.ponctuation  firstnames_women.dic.ponctuation  it_terms.dic  it_terms.dic.ponctuation  misc.dic  misc.dic.ponctuation
dict/fr_FR/context/: foot.dic  tennis.dic
src/: cli.rs  clipboard.rs  error.rs  main.rs  selection.rs  textutils.rs
src/input/: clipboard.rs  mod.rs  selection.rs  stdin.rs
src/input/ocr/: cuneiform.rs  mod.rs  tesseract.rs
src/input/ocr/screenshot/: gnome_screenshot.rs  mod.rs  xfce4_screenshooter.rs
src/player/: mod.rs  paplay.rs  play.rs  rodio.rs
src/translate/: argos_translate.rs  libretranslate.rs  mod.rs  translate_engine.rs  translate_locally.rs
src/tts/: espeak.rs  espeakng.rs  mod.rs  paplay.rs  pico.rs  play.rs  sox.rs  tts.rs
src/utils/: mod.rs  textutils.rs
