[package]
name = "gsp"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-clipboard = "0.4.0"
psutil = "3.2.2"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde_json = "1.0.108"
which = "5.0.0"
x11-clipboard = "0.8.1"

[dependencies.clap]
version = "4.4.11"
features = ["derive"]
