[package]
name = "gsp"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-clipboard = "0.4.0"
lingua = { version = "1.6.2", default-features = false, features = ["french", "english"] }
psutil = "3.2.2"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.108"
which = "5.0.0"
x11-clipboard = "0.8.1"

[dependencies.clap]
version = "4.4.11"
features = ["derive"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
