[package]
name = "gsp"
version = "0.3.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-clipboard = "0.4.0"
lingua = { version = "1.7.2", default-features = false, features = ["french", "english"] }
psutil = "3.3.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
rodio = "0.21.1"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
which = "8.0.0"
x11-clipboard = "0.9.3"

[dependencies.clap]
version = "4.5.51"
features = ["derive"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
